<resources>
    <string name="app_name">QuizApp</string>
    <string name="welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t Have An Account?</string>
    <string name="register_here">Register Here!</string>
    <string name="or_sign_in_with">Or Sign In With</string>
    <string name="riddle_rift">Riddle Rift</string>
    <string name="riddlerift">RiddleRift</string>
    <string name="join_us">Join Us!</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="login_here">Login Here</string>
    <string name="enter_quiz_id">Enter Quiz Id</string>
    <string name="start">Start</string>
    <string name="ready">Ready?</string>
    <string name="start2">Start</string>
    <string name="submit">Submit</string>
    <string name="quiz_description">Quiz Description</string>
    <string name="quiz_title">Quiz Title</string>
    <string name="time_limit">Time Limit</string>
    <string name="import_quiz">Import Quiz</string>
    <string name="create_quiz">Create Quiz</string>
    <string name="import_quiz_from_csv">Import Quiz from CSV</string>
    <string name="create_quiz2">Create Quiz</string>
    <string name="quiz_id">Quiz Id</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="title">Title</string>
    <string name="id">Id</string>
    <string name="import_csv">Import CSV</string>
    <string name="next">Next</string>
    <string name="_8">8</string>
    <string name="time_in_seconds_s">Time In Seconds(s)</string>
    <string name="_00_00">00:00</string>
    <string name="quiz_results">Quiz Results</string>
    <string name="trophy">trophy</string>
    <string name="leaderboard">LeaderBoard</string>
    <string name="sort_by_quiz_id">Sort by Quiz Id</string>
    <string name="username2">Username</string>
    <string name="quizid">QuizId</string>
    <string name="score">Score</string>
    <string name="time_s">Time (s)</string>
    <string name="time_in_minutes_m">Time in Minutes (M)</string>
    <string name="finish">Finish</string>
    <string name="score_8_10">Score: 8/10</string>
    <string name="result">Result:</string>
    <string name="your_final_result">Your Final Result</string>
    <string name="timeout_message">Oops.....time ran out :( :  </string>
    <string name="score_message">You Scored: </string>

</resources>