<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/app_bg"
    tools:context=".ui.screens.leaderBoard.LeaderBoardFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="fitXY"
            android:src="@drawable/trophy2"
            android:contentDescription="@string/trophy" />

        <TextView
            android:id="@+id/tvLeaderboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leaderboard"
            android:layout_gravity="center_vertical"
            android:textColor="@color/aqua"
            android:textStyle="bold|italic"
            android:layout_marginStart="10dp"
            android:textSize="30sp" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextColor="@color/aqua"
        android:textColorHint="@color/aqua"
        android:layout_marginVertical="20dp"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu" >

        <AutoCompleteTextView
            android:id="@+id/autoCompleteCategory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/sort_by_quiz_id"
            android:inputType="none"
            android:textColor="@color/aqua"
            android:background="@color/main"
            android:padding="16dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvLeaderBoard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="16dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_forward"
        android:backgroundTint="@color/main"/>
</LinearLayout>
