<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:background="@color/app_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvResultTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/your_final_result"
        android:textColor="@color/aqua"
        android:textSize="24sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/outerCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="10dp"
        android:backgroundTint="@color/main"

        card_view:cardCornerRadius="8dp">

        <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/innerCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@color/main"
            android:elevation="10dp"
            card_view:cardCornerRadius="8dp">

            <LinearLayout
                android:id="@+id/llResult"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/app_bg"
                android:gravity="center"
                android:padding="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/result"
                    android:textColor="@color/aqua"
                    android:textStyle="italic|bold"
                    android:textSize="18sp" />

                <!-- Add more TextViews or views as needed to display additional result information -->
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFinish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/main"
        android:text="@string/finish"
        app:cornerRadius="10dp"
        />


</LinearLayout>
