<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/app_bg"
    tools:context=".ui.screens.studentHome.StudentHomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardCornerRadius="500dp"
            android:layout_margin="20dp">
            <LinearLayout
                android:id="@+id/llWrapper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@color/main">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:elevation="10dp"
                    app:cardCornerRadius="500dp">

                    <LinearLayout
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@color/aqua">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/ready"
                            android:layout_marginStart="3dp"
                            android:layout_gravity="center_vertical|center_horizontal"/>


                    </LinearLayout>

                </androidx.cardview.widget.CardView>


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            style="@style/Widget.Material3.TextInputEditText.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etQuizId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_quiz_id"
                android:textColor="@color/aqua"
                android:textColorHint="@color/aqua"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start2"
            app:cornerRadius="10dp"
            android:backgroundTint="@color/main"/>






    </LinearLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>