<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/app_bg">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_quiz2"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/aqua"
        android:background="@color/main"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="500dp"
        android:layout_margin="20dp">

        <LinearLayout
            android:id="@+id/llWrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/main">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:elevation="10dp"
                app:cardCornerRadius="500dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:background="@color/aqua">

                    <ImageView
                        android:id="@+id/ivImage"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/quizlogo"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Quiz Creation Section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_id">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etQuizName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Quiz Id"
                android:textColor="@color/aqua"
                android:textColorHint="@color/aqua"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/baseline_title_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etQuizId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Title"
                android:textColor="@color/aqua"
                android:textColorHint="@color/aqua"

                />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_time">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTimer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/time_in_minutes_m"
                android:textColor="@color/aqua"
                android:textColorHint="@color/aqua"

                />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnImportCsv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/import_csv"
            app:cornerRadius="10dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/main"/>

        <TextView
            android:id="@+id/tvCsvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CSVName"
            android:textColor="@color/aqua"
            android:layout_gravity="center"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/createQuizBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/create_quiz"
            app:cornerRadius="10dp"
            android:backgroundTint="@color/main"/>
    </LinearLayout>



</LinearLayout>
